fix: max-width on safari

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ a {
     opacity: 0;
     transform: translateY(50px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+	max-width: 500px;
+	width: 100%;
 }
 
 .section.visible {
